Everything looks nice now

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,4 +1,6 @@
-<h2>Today's Events</h2>
-<p *ngFor="let event of todaysEvents">{{formatStartTime(event.start) | amDateFormat:'LLLL'}} - {{event.summary}}</p>
-<h2>This week's Events</h2>
-<p *ngFor="let event of weeksEvents">{{formatStartTime(event.start) | amDateFormat:'LLLL'}} - {{event.summary}}</p>
+<div class="calendar-container">
+    <h2>Today</h2>
+    <p *ngFor="let event of todaysEvents"><span class="secondary">{{formatStartTime(event.start) | amDateFormat:'h:mm A'}} - </span>{{event.summary}}</p>
+    <h2>This Week</h2>
+    <p *ngFor="let event of weeksEvents"><span class="secondary">{{formatStartTime(event.start) | amDateFormat:'dddd, Do'}} - </span>{{event.summary}}</p>
+</div>
